syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package=".;hostinfo_pb";

service HostInfo{
  rpc FindPage(HostInfoPageInfo) returns (HostInfoResp);//主机分页列表
  rpc Delete(HostInfoIdsRequest) returns (HostInfoDefResp); //删除主机
  rpc UpdateHost(Host) returns (HostInfoDefResp); //更新主机
  rpc UpdateAuthentication(Authentication) returns (HostInfoDefResp); //更新主机认证信息
  rpc Create(HostAndAuthentication) returns (HostInfoDefResp); //创建主机
  rpc FindAll(google.protobuf.Empty) returns (HostInfoResp); //查询所有主机数据
  rpc FindHostByIp(HostInfoIpRequest) returns (HostAndAuthentication); //通过IP查询单个主机
  rpc FindById(HostInfoIdsRequest) returns (HostAndAuthentication); //通过ID查询单个主机
}

message Host{
  int32 id=1;
  string ip=2;
  int32 port=3;
  string os=4;
  map<string, string> label=5;
}

message Authentication{
  string username=1;
  int32 authMode=2;
  string auth=3;
  int32 id=4;
}

message HostAndAuthentication{
  int32 id=1;
  string ip=2;
  int32 port=3;
  string os=4;
  map<string, string> label=5;
  string username=6;
  int32 authMode=7;
  string auth=8;
}

message HostInfoIdsRequest{
  repeated int32 ids = 1;
}
message HostInfoIpRequest{
  string ip = 2;
}
message HostInfoIsExists{
  bool isExist=1;
}

message HostInfoPageInfo{
  int32 index =1;
  int32 size =2;
}

message HostInfoResp {
  int64 total =1;
  repeated Host data =2;
  string error=3;
  int32 code=4;
}

message HostInfoDefResp {
  string error=1;
  int32 code=2;
}